fix(docs): Added new lines and spacing to props default values

--- a/packages/docs/styles/globals.css
+++ b/packages/docs/styles/globals.css
@@ -11,3 +11,7 @@ body {
 .pf-c-page {
   min-height: 100vh;
 }
+
+.default-prop-spacer {
+  padding-left: 4px;
+}
